build and push when enableMultiArch (#1)

--- a/.eslintrc
+++ b/.eslintrc
@@ -8,6 +8,9 @@
     "node": true,
     "jest": true
   },
+  "parserOptions": {
+    "ecmaVersion": 2021
+  },
   "rules": {
     "prettier/prettier": [
       "error",
