--- a/.github/workflows/e2e.yml
+++ b/.github/workflows/e2e.yml
@@ -26,6 +26,15 @@ jobs:
             addLatest: true
             labels: org.opencontainers.image.description="A Hello World image used for e2e tests"
 
+          - name: Multi-platform e2e
+            image: mrsmithers/hello-world
+            dockerfile: ./e2e/Dockerfile
+            registry: docker.io
+            username: DOCKERHUB_USERNAME
+            password: DOCKERHUB_PASSWORD
+            multiPlatform: true
+            platform: linux/amd64,linux/arm64,linux/arm/v7
+
           - name: GCR e2e
             image: orbital-bank-301021/hello-world
             dockerfile: ./e2e/Dockerfile
