--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -4,11 +4,12 @@ on: [push]
 
 jobs:
   run-tests:
+    if: ${{ github.actor != 'dependabot[bot]' }}
     name: Unit Tests
     runs-on: ubuntu-latest
     steps:
       - name: Check out code
-        uses: actions/checkout@v2
+        uses: actions/checkout@v3
 
       - uses: actions/setup-node@v3
         with:
@@ -18,9 +19,27 @@ jobs:
         run: npm ci
 
       - name: Run tests & submit coverage report
-        uses: paambaati/codeclimate-action@v2.7.5
+        uses: paambaati/codeclimate-action@v3
         env:
           CC_TEST_REPORTER_ID: ${{ secrets.CC_TEST_REPORTER_ID }}
         with:
           coverageCommand: npm run test
           coverageLocations: "coverage/lcov.info:lcov"
+
+    dependabot-tests:
+    if: ${{ github.actor == 'dependabot[bot]' }}
+    name: Dependabot Unit Tests
+    runs-on: ubuntu-latest
+    steps:
+      - name: Check out code
+        uses: actions/checkout@v3
+
+      - uses: actions/setup-node@v3
+        with:
+          node-version: 16
+
+      - name: Build
+        run: npm ci
+
+      - name: Run tests
+        run: npm run test
