--- a/package.json
+++ b/package.json
@@ -37,7 +37,7 @@
   "dependencies": {
     "@actions/core": "^1.10.0",
     "@actions/github": "^5.1.1",
-    "dateformat": "^4.6.3"
+    "dayjs": "^1.11.7"
   },
   "devDependencies": {
     "@vercel/ncc": "^0.33.4",
