--- a/package.json
+++ b/package.json
@@ -37,7 +37,7 @@
   "dependencies": {
     "@actions/core": "^1.10.0",
     "@actions/github": "^5.1.1",
-    "dateformat": "^4.6.3"
+    "dayjs": "^1.11.7"
   },
   "devDependencies": {
     "@vercel/ncc": "^0.33.4",
@@ -47,9 +47,9 @@
     "eslint-plugin-import": "^2.25.4",
     "eslint-plugin-jsx-a11y": "^6.5.1",
     "eslint-plugin-prettier": "^3.4.1",
-    "eslint-plugin-react": "^7.29.3",
+    "eslint-plugin-react": "^7.32.2",
     "husky": "^7.0.4",
     "jest": "^27.5.1",
-    "prettier": "^2.5.1"
+    "prettier": "^2.8.4"
   }
 }
