--- a/package.json
+++ b/package.json
@@ -47,10 +47,11 @@
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-import": "^2.29.0",
     "eslint-plugin-jsx-a11y": "^6.8.0",
-    "eslint-plugin-prettier": "^4.2.1",
+    "eslint-plugin-prettier": "^5.0.1",
     "eslint-plugin-react": "^7.33.2",
     "husky": "^8.0.3",
     "jest": "^29.7.0",
+    "mockdate": "^3.0.5",
     "prettier": "^3.1.0"
   }
 }
