--- a/.github/workflows/e2e.yml
+++ b/.github/workflows/e2e.yml
@@ -39,8 +39,8 @@ jobs:
             image: orbital-bank-301021/hello-world/hello-world
             dockerfile: ./e2e/Dockerfile
             registry: us-west1-docker.pkg.dev
-            username: GCR_USERNAME
-            password: GCR_PASSWORD
+            username: GAR_USERNAME
+            password: GAR_PASSWORD
             labels: org.opencontainers.image.description="A Hello World image used for e2e tests"
 
           - name: ECR e2e
